syntax = "proto3";

option go_package = "github.com/umamaheswari76/performance_testing_k6/grpc_test";

package grpc_test;

service GrpcTestService{
    rpc CreateProfile (Profile) returns (ProfileResponse);
}

message Profile{
    string Name = 1;
}

message ProfileResponse{
    string StringMessage = 1;
}